--- a/Exploratory-Data-Analysis.ipynb
+++ b/Exploratory-Data-Analysis.ipynb
@@ -16,8 +16,8 @@
     "The project is divided into three separate Jupyter notebooks:\n",
     "\n",
     "1. Exploratory Data Analysis (below)\n",
-    "2. Modeling\n",
-    "3. Conclusions"
+    "2. [Modeling](https://github.com/melaniewalsh/heart-disease-prediction/blob/master/Modeling.ipynb)\n",
+    "3. [Conclusions](https://github.com/melaniewalsh/heart-disease-prediction/blob/master/Conclusions.ipynb)"
    ]
   },
   {
