--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -15,9 +15,9 @@
     "\n",
     "The project is divided into three separate Jupyter notebooks:\n",
     "\n",
-    "1. Exploratory Data Analysis \n",
+    "1. [Exploratory Data Analysis](https://github.com/melaniewalsh/heart-disease-prediction/blob/master/Exploratory-Data-Analysis.ipynb)\n",
     "2. Modeling (below)\n",
-    "3. Conclusions"
+    "3. [Conclusions](https://github.com/melaniewalsh/heart-disease-prediction/blob/master/Conclusions.ipynb)"
    ]
   },
   {
