--- a/Conclusions.ipynb
+++ b/Conclusions.ipynb
@@ -19,8 +19,8 @@
     "\n",
     "The project is divided into three separate Jupyter notebooks:\n",
     "\n",
-    "1. Exploratory Data Analysis \n",
-    "2. Modeling\n",
+    "1. [Exploratory Data Analysis](https://github.com/melaniewalsh/heart-disease-prediction/blob/master/Exploratory-Data-Analysis.ipynb)\n",
+    "2. [Modeling](https://github.com/melaniewalsh/heart-disease-prediction/blob/master/Modeling.ipynb)\n",
     "3. Conclusions (below)"
    ]
   },
