--- a/Conclusions.ipynb
+++ b/Conclusions.ipynb
@@ -211,14 +211,14 @@
     "> 2. sex \n",
     "> 3. chest pain type \n",
     "> 4. resting blood pressure \n",
-    "> 5. serum cholestoral in mg/dl \n",
+    "> 5. serum cholestorol in mg/dl \n",
     "> 6. fasting blood sugar > 120 mg/dl\n",
     "> 7. resting electrocardiographic results \n",
     "> 8. maximum heart rate achieved \n",
     "> 9. exercise induced angina \n",
     "> 10. oldpeak = ST depression induced by exercise relative to rest \n",
     "> 11. the slope of the peak exercise ST segment \n",
-    "> 12. number of major vessels colored by flourosopy \n",
+    "> 12. number of major vessels colored by fluoroscopy \n",
     "> 13. thal: 3 = normal; 6 = fixed defect; 7 = reversable defect (thallium heart scan or stress test)"
    ]
   },
@@ -233,9 +233,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After experimenting with four binary classificaiton machine learning algorithms (random forest, k-nearest neighbors, logistic regression, and Naive Bayes), the alogrithms that returned the most accurate heart disease predicitons were **k-nearest neighbors** and **logistic regression**. Both algorithms returned an accuracy score of **90.2%**. \n",
+    "After experimenting with four binary classification machine learning algorithms (random forest, k-nearest neighbors, logistic regression, and Naive Bayes), the algorithms that returned the most accurate heart disease predictions were **k-nearest neighbors** and **logistic regression**. Both algorithms returned an accuracy score of **90.2%**. \n",
     "\n",
-    "However, I decided to move forward with **k-nearest neighbors** because its precision score with healthy diagonses was higher (0.90 vs. .87). The model returned fewer false negatives, in other words: fewer false healthy diagnoses when the patients were actually sick. For this case study, I deemed that it was more dangerous to return a false negative, because the consequence could be that a sick patient does not receive the medical treatment they need. With that said, it would be advantageous to learn more about how this prediction model might actually be used in practice and other possible consequences, which would help further inform my algorithm choice."
+    "However, I decided to move forward with **k-nearest neighbors** because its precision score with healthy diagnoses was higher (0.90 vs. .87). The model returned fewer false negatives, in other words: fewer false healthy diagnoses when the patients were actually sick. For this case study, I deemed that it was more dangerous to return a false negative, because the consequence could be that a sick patient does not receive the medical treatment they need. With that said, it would be advantageous to learn more about how this prediction model might actually be used in practice and other possible consequences, which would help further inform my algorithm choice."
    ]
   },
   {
@@ -368,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After succesfully creating a model to predict heart disease, I next attempted to identify features that might be strong indicators of heart disease."
+    "After successfully creating a model to predict heart disease, I next attempted to identify features that might be strong indicators of heart disease."
    ]
   },
   {
