add images and folders

--- a/Exploratory-Data-Analysis.ipynb
+++ b/Exploratory-Data-Analysis.ipynb
@@ -1681,7 +1681,9 @@
   {
    "cell_type": "code",
    "execution_count": 343,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
